Fixed some spacing

--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ section {
   padding-top: 15px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 10px;
   /* Puts <a> tags below nav */
   border-top: dashed 5px #000;
 }
@@ -100,6 +101,7 @@ section:last-of-type {
 
 #home-screen {
   height: 620px;
+  padding-bottom: 0;
   background-image: url("common-resources/pelican-horizon.png");
   background-size: 850px;
   background-repeat: no-repeat;
@@ -107,6 +109,11 @@ section:last-of-type {
 
 #about-screen {
   background-color: #c4ffff;
+}
+
+#about-screen p:last-of-type {
+  margin-bottom: 0;
+
 }
 
 #portfolio-screen {
